lab1/k8s/service1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1-deployment
spec:
  replicas: 1                      # кількість екземплярів Pod, що буде створено цим Deployment
  selector:
    matchLabels:
      app: service1                # селектор по якому Deployment зв'язаний з Pod
  template:
    metadata:
     labels:
       app: service1               # мітка Pod по якому вона буде зв'язана з Deployment та Service
    spec:
      containers:
        - image: zhenyanovikov/service1:0.1       # образ Docker
          name: service1           # ім'я контейнеру
          imagePullPolicy: Always # політика оновлення образу
          ports:
            - containerPort: 8080  # порт по якому можна звертатись до поди
